# algorithms

./: README.md  calculator
calculator/: README.md  grammar.output  grammar.y  lexis.l  makefile
eratosthenesSieve/: main.c  makefile
fastPowInMod/: README.md  main.c  makefile
giftWrappingAlgo/: CMakeLists.txt  README.md  build.sh  input2.txt  main.cpp  res
ownAllocator/: CMakeLists.txt  README.md  SmallAllocator.cpp  SmallAllocator.h  main.cpp
ownAllocator/doc/: how_it_works.txt
primeNumberTestUsingCppTemplateLanguage/: README.md  main.cpp  makefile
quickSort/: CMakeLists.txt
quickSort/src/: main.c  quickSort.c  quickSort.h
sortingAlgorithms/: CMakeLists.txt  README.md  TODO.txt  main.cpp  testingUtilities.h
sortingAlgorithms/bubbleSort/: bubbleSort.cpp  bubbleSort.h
sortingAlgorithms/bubbleSort/tests/: CMakeLists.txt  test.cpp
sortingAlgorithms/insertionSort/: insertionSort.cpp  insertionSort.h
sortingAlgorithms/insertionSort/tests/: CMakeLists.txt  insertionSortTest.cpp
sortingAlgorithms/selectionSort/: selectionSort.cpp  selectionSort.h
sortingAlgorithms/selectionSort/tests/: CMakeLists.txt  selectionSortTest.cpp
zeroCountInFactorial/: README.md  main.cpp  main.py  makefile
