cmake_minimum_required(VERSION 3.9)
project(sortingAlgorithms)
include_directories(${GTEST_INCLUDE_DIRS})
set(CMAKE_CXX_STANDARD 17)
add_subdirectory(bubbleSort/tests)
add_test(testBubbleSort "/bubbleSort/tests/bubbleSortTest")
enable_testing()
add_executable(sortingAlgorithms main.cpp bubbleSort/bubbleSort.cpp)
target_link_libraries(sortingAlgorithms)