cmake_minimum_required(VERSION 3.9)
project(bubbleSortTest)
find_package(GTest 1.8.0 REQUIRED)
find_package(Threads REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
set(CMAKE_CXX_STANDARD 17)
add_executable(bubbleSortTest test.cpp ../bubbleSort.cpp)
target_link_libraries(bubbleSortTest ${GTEST_LIBRARIES} Threads::Threads gtest_main)